Added new backend endpoint + Copied Staff Table to user management
